Reds bonus alignment fix

--- a/src/styles/turmoil.less
+++ b/src/styles/turmoil.less
@@ -403,6 +403,7 @@
     padding-left: 5px;
     height: 16px;
     line-height: 11px;
+    vertical-align: middle;
 }
 
 .party-tile {
